add compare handler
